# market-and-mastery

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  settings.json  thinking.md
godot/: agent_10.tscn  icon.svg.import  main.gdextension  main.tscn  project.godot  tent.tscn
godot/sprites/: berry_picker.png.import  bush.png.import  empty_field.png.import  farmer.png.import  farmer_full.png.import  farmer_tent.png.import  field.png.import
src/: lib.rs  main.rs
src/agent/: agent.rs  build_behaviour.rs  farmer.rs  free_space_manager.rs  mod.rs  move_and_build_behaviour.rs  move_behaviour.rs
src/behaviour/: agent_behaviour.rs  behaviour_regestry.rs  farmer_behaviour.rs  free_space_manager.rs  mod.rs  move_and_build_behaviour.rs  move_behaviour.rs  work_behaviour.rs
src/building/: building.rs  building_configs.rs  field.rs  mod.rs
src/resources/: inventory.rs
tests/: move_behaviour_test.rs
