[package]
name = "market-and-mastery"
version = "0.1.0"
edition = "2021"
authors = ["Mikhail Kurenkov <kurenkovrobotics@gmail.com>"]
description = "A Rust project for market and mastery"
readme = "README.md"
license = "MIT"

[dependencies]
godot = "0.2.4"
bonsai-bt = "*"
rand = "0.8"
# Add your dependencies here
# For example:
# tokio = { version = "1.28", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

[dev-dependencies]
approx = "0.5"

[lib]
name = "market_and_mastery"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "market_and_mastery_bin"
path = "src/main.rs" 

